--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -8,7 +8,7 @@ header {
 	z-index: 999;
 	transition: 0.5s;
 
-	
+
 	&.scrolled {
 		left: 0;
 		right: 0;
@@ -1302,6 +1302,7 @@ section.reasons {
 section.stories {
 	margin-top: 45px;
 	overflow: hidden;
+	padding-bottom: 15px;
 	.section-inner {
 		max-width: 100%;
 		padding: 0;
