--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -13,7 +13,7 @@ header {
 		left: 0;
 		right: 0;
 		background: #21262c;
-		filter: drop-shadow(0px 3px 8px rgba(0,0,0,0.25));
+		box-shadow: 0px 2px 15px 0px rgba(50, 50, 50, 0.2);
 
 	}
 	
@@ -120,9 +120,9 @@ header {
 							color: #3b3b3b;
 						}
 						&:hover {
-							background: #5f80cc;
+							
 							>a {
-								color: #fff;
+								color: #c13b47;
 							}
 							>.sub-menu {
 								display: block;
@@ -423,7 +423,7 @@ header {
 			background: #ededed;
 			border-radius: 5px;
 			display: inline-block;
-			color: #ca6c6c;	
+			color: #bd3f3c;	
 			cursor: pointer;
 			
 			font-size: 14px;
@@ -432,19 +432,22 @@ header {
 			top: 10px;
 
     		left: 0px;
-			i {
+			i, span {
 				position: absolute;
-				top: 1px;
-				left: 5px;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%,-50%);
 				
-				font-size: 24px;
-				transition: 0.5s;
+				font-size: 18px;
+			
+
+				transform-origin: 0% 0%;
 			}
 		}
 
 		.rotate {
-			i {
-				transform: rotate(180deg);
+			i, span {
+				transform: rotate(180deg) translate(-50%,-50%);
 		   		color: #cf0006;
 			}
 		  
@@ -460,85 +463,31 @@ section.slider-top {
 	border-bottom: 140px solid #f0f1f4;
 	position: relative;
 
-	.contact-floating {
-		height: 150px;
-		width: 150px;
+	.play-button {
 		position: absolute;
-		
+		top: 45px;
+		left: 50%;
+
+		transform: translate(-50%,-50%);
 		z-index: 2;
-		background-image: linear-gradient(to right, #cb356b , #bd3f32);
-		border: 4px solid #fff;
+		height: 70px;
+		width: 70px;
+		
+		background: rgba(255,255,255,0.8);
 		border-radius: 100%;
 		cursor: pointer;
-		position: fixed;
-		left: 30px;
-		bottom: 30px;
-		z-index: 9;
-		.inner {
+		i {
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%,-50%);
-			text-align: center;
-			width: 100%;
-			color: #fff;
-			font-size: 17px;
-			.line-1 {
-				@include f-m;
-				font-size: 17px;
-				color: #fff;
-
-			}
-			.line-2 {
-				@include f-b;
-				font-size: 25px;
-				color: #fff;
-			}
-			i {
-				display: none;
-			}
+			font-size: 24px;
+			color: #c33950;
 		}
-	}
 
-	@media only screen and (max-width : 1700px) {
-
-		.contact-floating {
-			height: 100px;
-			width: 100px;
-			left: 20px;
-			bottom: 20px;
-
-			.inner {
-				.line-1 {
-					font-size: 14px;
-				}
-				.line-2 {
-					font-size: 18px;
-				}
-			}
-		}
-	}
-
-	@media only screen and (max-width : 1500px) {
-		.contact-floating {
-			height: 45px;
-			width: 45px;
-			left: 10px;
-			bottom: 10px;
-			border: 2px solid #fff;
-			.inner {
-				.line-1 {
-					display: none;
-				}
-				.line-2 {
-					display: none;
-				}
-				i {
-					display: block;
-					position: relative;
-					top: -2px;
-				}
-			}
+		display: none;
+		@media only screen and (max-width : 700px) {
+			display: block;
 		}
 	}
 
@@ -547,6 +496,130 @@ section.slider-top {
 	}
 }
 /* --------------------- /Section slider-top ---------------------- */
+
+
+.contact-floating-mobile {
+	position: fixed;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	height: 50px;
+	z-index: 99;
+	display: flex;
+
+	display: none;
+	@media only screen and (max-width : 700px) {
+		display: flex;
+	}
+	a {
+		display: inline-block;
+		height: 100%;
+		padding: 10px;
+		border: 1px solid #fff;
+
+		&.button {
+			width: 50px;
+			position: relative;
+			@include gr-bg;
+			i {
+				font-size: 20px;
+				color: #fff;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%,-50%);
+			}
+		}
+
+		&.mail-text {
+			flex-grow: 1;
+			background-image: linear-gradient(to top, #2e2a30 , #3e3c45);
+			@include f-r;
+			font-size: 20px;
+			color: #fff;
+			text-align: center;
+		}
+	}
+}
+.contact-floating {
+	height: 150px;
+	width: 150px;
+
+	z-index: 2;
+	background-image: linear-gradient(to right, #cb356b , #bd3f32);
+	border: 4px solid #fff;
+	border-radius: 100%;
+	cursor: pointer;
+	position: fixed;
+	left: 30px;
+	bottom: 30px;
+	z-index: 9;
+	.inner {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+		text-align: center;
+		width: 100%;
+		color: #fff;
+		font-size: 17px;
+		.line-1 {
+			@include f-m;
+			font-size: 17px;
+			color: #fff;
+
+		}
+		.line-2 {
+			@include f-b;
+			font-size: 25px;
+			color: #fff;
+		}
+		i {
+			display: none;
+		}
+	}
+
+	@media only screen and (max-width : 1700px) {		
+		height: 100px;
+		width: 100px;
+		left: 20px;
+		bottom: 20px;
+
+		.inner {
+			.line-1 {
+				font-size: 14px;
+			}
+			.line-2 {
+				font-size: 18px;
+			}
+		}
+	}
+
+	@media only screen and (max-width : 1500px) {
+		height: 45px;
+		width: 45px;
+		left: 10px;
+		bottom: 10px;
+		border: 2px solid #fff;
+		.inner {
+			.line-1 {
+				display: none;
+			}
+			.line-2 {
+				display: none;
+			}
+			i {
+				display: block;
+				position: relative;
+				top: -2px;
+			}
+		}
+	}
+
+	@media only screen and (max-width : 700px) {
+		display: none;
+	}
+}
 
 /* ---------------------- Section courses ---------------------- */
 section.courses {
@@ -626,7 +699,9 @@ section.courses {
 				top: 50%;
 				transform: translateY(-50%);
 				right: 30px;
+				left: 30px;
 				transition: 0.5s;
+
 				.line-1 {
 					@include f-r;
 					font-size: 20px;
@@ -639,17 +714,60 @@ section.courses {
 					color: #c33a4d;
 					padding: 30px 30px;
 					height: 120px;
+				}
 
+				
+			}
+
+			.price {
+				text-align: center;
+				position: absolute;
+				bottom: 35px;
+				left: 10px;
+				right: 10px;
+				transition: 0.5s;
+				.price-1 {
+					@include f-m;
+					font-size: 15px;
+					color: #2d2d2d;
+				}
+				.price-2 {
+					@include f-b;
+					font-size: 35px;
+					color: #c33a4d;
 				}
 			}
 
+			.button {
+				display: inline-block;
+				position: absolute;
+				bottom: 25px;
+				left: 50%;
+				transform: translateX(-50%);
+				@include f-b;
+				font-size: 17px;
+				color: #fff;
+				padding: 20px 25px;
+				@include gr-bg;
+				opacity: 0;
+				transition: 0.5s;
+				white-space: nowrap;
+			}
+
 			&:hover {
+				.price {
+					opacity: 0;
+				}
+				.button {
+					opacity: 1;
+					bottom: 50px;
+				}
 				.image {
 					&:after {
 						opacity: 0;
 					}
 					.static {
-						opacity: 0;
+						//opacity: 0;
 					}
 					.animated {
 						opacity: 1;
@@ -730,7 +848,7 @@ section.courses {
 			}
 			.box {
 				width: 100%;
-				height: 130px;
+				height: 150px;
 				position: relative;
 				margin-top: 20px;
 				&:first-child {
@@ -747,7 +865,7 @@ section.courses {
 					bottom: 0px;
 					left: 0;
 					right: 0;
-					height: 10px;
+					height: 5px;
 					background-image: linear-gradient(to right, #cb356b , #bd3f32);
 				}
 				&:before {
@@ -795,6 +913,29 @@ section.courses {
 						margin-top: 10px;
 						margin-right: 15%;
 					}
+				}
+
+				.price {
+					opacity: 1;
+					bottom: 10px;			
+					left: 10px;
+					right: auto;
+
+					.price-1 {
+						font-size: 13px;
+						display: inline-block;
+						vertical-align: middle;
+						margin-left: 10px;
+					}
+					.price-2 {
+						font-size: 18px;
+						display: inline-block;
+						vertical-align: middle;
+					}
+				}
+
+				.button {
+					display: none;
 				}
 			}
 		}
@@ -954,6 +1095,9 @@ section.about {
 					padding: 30px;
 					padding-right: 65px;
 					position: relative;
+					&:nth-child(3){
+						display: none;
+					}
 					.title {
 						@include f-m;
 						font-size: 25px;
@@ -1054,6 +1198,9 @@ section.about {
 						margin-right: 25px;
 						margin-top: 20px;
 						width: 100%;
+						&:nth-child(3){
+							display: block;
+						}
 					}
 				}
 			}
@@ -1174,6 +1321,14 @@ section.reasons {
 			margin-top: 75px;
 			position: relative;
 			cursor: pointer;
+
+			bottom: -20px;
+			opacity: 0;
+			transition: 0.5s;
+			&.scrolled-to {
+				bottom: 0;
+				opacity: 1;
+			}
 			.text {
 				max-width: 150px;
 				display: inline-block;
@@ -1334,6 +1489,10 @@ section.stories {
 			transition: 0.5s;
 			direction: rtl;
 			text-align: right;
+			direction: rtl;
+			* {
+				direction: rtl;
+			}
 			.image {
 				width: 100%;
 				height: 100%;
@@ -1384,12 +1543,25 @@ section.stories {
 				}
 			}
 
-			&:hover {
-				transform: scale(1.05);
-				z-index: 2;
+			@media only screen and (min-width : 850px) {
+				&:hover {
+					transform: scale(1.05);
+					z-index: 2;
 
-				.caption {
-					opacity: 1;
+					.caption {
+						opacity: 1;
+					}
+				}
+			}
+
+			@media only screen and (max-width : 850px) {
+				&.hover {
+					transform: scale(1.05);
+					z-index: 2;
+
+					.caption {
+						opacity: 1;
+					}
 				}
 			}
 		}
@@ -1600,6 +1772,7 @@ footer {
 		
 		.wpcf7 {
         	margin-top: 55px;
+        	position: relative;
             form {
             	display: flex;
             	justify-content: center;
@@ -1607,6 +1780,7 @@ footer {
 
                 .wpcf7-form-control-wrap {
                     display: block;
+                    position: relative;
                    	width: 220px;
                    	padding: 3px 3px;
                 }
@@ -1648,14 +1822,19 @@ footer {
 			.ajax-loader {
 				display: none;
 			}
-            .alert, .wpcf7-response-output {
+            span[role="alert"], .alert, .wpcf7-response-output {
+            	@include f-r;
+
             	position: absolute;
                 border: none;
-            	bottom: 0;
             	right: 10px;
-            	bottom: 10px;
+            	bottom: -20px;
             	font-size: 16px;
             	color: #e63447;
+            }
+
+            .wpcf7-response-output {
+            	bottom: -50px;
             }
         }
 
@@ -1718,6 +1897,17 @@ footer {
 						width: 100%;
 					}
 				}
+
+				span[role="alert"], .alert, .wpcf7-response-output {
+	            	right: 10px;
+	            	bottom: 3px;
+	            	font-size: 11px;
+	            }
+
+	            .wpcf7-response-output {
+	            	font-size: 16px;
+	            	bottom: -25px;
+	            }
 			}
 			.links {
 				margin-top: 35px;
